# Glurg

./: CMakeLists.txt  README  glurg.sh
cmake/: FindSnappy.cmake
glurg/: Main.moon
glurg/common/: Blob.moon  Log.moon  ParameterParser.moon  Promise.moon  Retrace.moon  Types.moon
glurg/filters/: BufferFilter.moon  Filter.moon  ProgramFilter.moon  VertexArrayFilter.moon
glurg/heuristics/: GL3StaticModelHeuristic.moon  Heuristic.moon
glurg/resources/: Mesh.moon  MeshBlob.moon  MeshBlobBuilder.moon  Model.moon  Texture.moon  TextureBlob.moon  TextureBlobBuilder.moon
glurg/trace/: Call.moon  Event.moon  Trace.moon  Value.moon
libglurg/: CMakeLists.txt
libglurg/include/glurg/common/: base64.hpp  fileStream.hpp  hash.hpp  lua.hpp  pixelData.hpp  process.hpp  simpleFileStream.hpp  snappyAdapter.hpp
libglurg/include/glurg/resources/: openGL.hpp  renderState.hpp  renderValue.hpp  resource.hpp  resourceBlob.hpp  resourceBlobBuffer.hpp  resourceBlobBuilder.hpp  resourceFingerprint.hpp  textureResource.hpp  textureResourceBlob.hpp  textureResourceBlobBuilder.hpp
libglurg/include/glurg/resources/mesh/: meshResource.hpp  meshResourceBlob.hpp  meshResourceBlobBuilder.hpp  model.hpp  modelAnimation.hpp  modelExporter.hpp  modelFrame.hpp
libglurg/include/glurg/resources/texture/: pixelUnpacker.hpp  textureResource.hpp  textureResourceBlob.hpp  textureResourceBlobBuilder.hpp
libglurg/include/glurg/trace/: bitmaskSignature.hpp  call.hpp  callSignature.hpp  enumerationSignature.hpp  events.hpp  signatureRegistry.hpp  structure.hpp  structureSignature.hpp  traceFile.hpp  values.hpp
libglurg/source/common/: base64.cpp  hash.cpp  lua.cpp  pixelData.cpp  process.cpp  simpleFileStream.cpp  snappyAdapter.cpp
libglurg/source/common/lua/: common.cpp  resources.cpp  trace.cpp
libglurg/source/resources/: openGL.cpp  renderState.cpp  renderValue.cpp  resourceBlobBuffer.cpp  resourceFingerprint.cpp  textureResource.cpp  textureResourceBlob.cpp  textureResourceBlobBuilder.cpp
libglurg/source/resources/mesh/: meshResource.cpp  meshResourceBlob.cpp  meshResourceBlobBuilder.cpp  model.cpp  modelExporter.cpp
libglurg/source/resources/texture/: pixelUnpacker.cpp  textureCompression.c  textureCompression.h  textureResource.cpp  textureResourceBlob.cpp  textureResourceBlobBuilder.cpp
libglurg/source/trace/: bitmaskSignature.cpp  call.cpp  callSignature.cpp  enumerationSignature.cpp  events.cpp  structure.cpp  structureSignature.cpp  traceFile.cpp  values.cpp
misc/: apitrace_retrace_main.patch  retrace_main.patch
misc/tutorial/: tutorial.markdown
misc/tutorial/heuristics/: PrintMesh.moon  PrintUniforms.moon  RS3Model.moon  TextureAtlasFilter.moon
utilities/: CMakeLists.txt
utilities/lua/: dump_framebuffer.moon  dump_images.lua  print_trace_functions.moon  save_images_2d.moon  save_models.moon
utilities/source/: print_trace_funcs.cpp  save_image.cpp
